# missedcall-agent

./: .env.example  .gitignore  LICENSE  README.md  manifest.yaml  pcc-deploy.toml  pyproject.toml  vercel.json
.github/workflows/: ci.yml
docs/: architecture.md
prds/: pipecat-missed-call-agent.md
src/missed_call_agent/: __init__.py  config.py  main.py  pipecat_bot.py  prompts.py  slack.py  slack_log.py
tests/: conftest.py  test_call_end.py  test_twilio_twiml.py
tests/e2e/: test_two_turn_voice.py
text-agent/: README.md
twilio-functions/: package.json
twilio-functions/functions/: voice.js
twilio-functions/test/: voice.test.js
voice-agent/: .env.example  Dockerfile  Dockerfile.web  README.md  bot.py
voice-agent/prds/: pipecat-missed-call-agent.md
voice-agent/src/missed_call_agent/: config.py  main.py  pipecat_bot.py  prompts.py  records.py
voice-agent/tests/: conftest.py  test_danish_voice_config.py  test_slack.py  test_twilio_twiml.py
voice-agent/tests/e2e/: test_two_turn_voice.py
voice-agent/twilio-functions/: package.json
voice-agent/twilio-functions/functions/: voice.js
voice-agent/twilio-functions/test/: voice.test.js
web-app/: README.md  package-lock.json  package.json  wrangler.jsonc
web-app/src/app/: actions.ts  globals.css  layout.tsx  page.tsx  submit-button.tsx
web-app/src/app/api/runtime/profiles/[profileId]/: route.ts
web-app/src/app/api/runtime/profiles/by-number/: route.ts
web-app/src/app/sign-in/[[...sign-in]]/: page.tsx
web-app/src/app/sign-up/[[...sign-up]]/: page.tsx
web-app/src/lib/: assistant-profile.ts  runtime-auth.ts
